--- a/reg.html
+++ b/reg.html
@@ -9,15 +9,18 @@
     <script src='reg.js' type="text/javascript"></script>
 </head>
 <body>
-    <p>Ajouter un point : Choisir un x et y</p>
-    <input type="number" class="form-control" name="" id="x" >
-    <input type="number" class="form-control" name="" id="y" >
-    <button class="btn btn-danger col-3" onclick="ajouter()">Ajouter</button>
-    <button class="btn btn-danger col-3" onclick="regression()">S'entraîner</button>
+    <div style="color: red; text-align: center; font-size: 40px; font-weight: bold; font-style: normal;">
+            Regression Linéaire
+        </div>
+    <p style="font-size: larger; font-style: normal; font-weight: bold;">Ajouter un point : Choisir un x et y</p>
+    <input type="number"  name="" id="x" >
+    <input type="number" name="" id="y" >
+    <button onclick="ajouter()">Ajouter</button>
+    <button  onclick="regression()">S'entraîner</button>
     <br>
     <br>
-    <div id="nv" ></div>  
-    <div id="nv2" ></div>       
+    <div id="nv" ></div>   
+
 
 </body>
 </html>
