--- a/acceuil/calc.html
+++ b/acceuil/calc.html
@@ -16,7 +16,7 @@
         var img;
         let a = [];
         function preload() {
-            img = loadImage("images/image.png");
+            img = loadImage("../images/image.png");
         }
         function setup() {
             createCanvas(800, 600);
@@ -49,7 +49,7 @@
                 
 
             }
-            window.location.href = "cro.php?var1=" + b;
+            window.location.href = "../PHP/cro.php?var1=" + b;
         }
 
         let b = [];
