--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 
          $('#preloader').delay(1500).animate({ top: '-100%' }, 2000, $.bez([0.19, 1, 0.22, 1]));
-         location.href = '../acceuil/acceuil.html';
+         location.href = 'acceuil/acceuil.html';
 
       });
 
