--- a/test/c.html
+++ b/test/c.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/imgareaselect.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="js/jquery.imgareaselect.js"></script>
-<link rel="stylesheet" href="../CSS/index2.css">
+<link rel="stylesheet" href="../CSS/index.css">
     <title>Document</title>
     <style>
         
