--- a/acceuil/acceuil.html
+++ b/acceuil/acceuil.html
@@ -6,21 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src='blossom.js' type="text/javascript"></script>
+    <script src='acceuil.js' type="text/javascript"></script>
 
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="../CSS/acceuil.css">
+    <link rel="stylesheet" href="../CSS/acc.css">
+    <script src='blossom.js' type="text/javascript"></script>
     <title>Document</title>
 </head>
 
 <body>
 
-    <div class="des">
+    <div class="des" >
         <p>
-            Bienvenue ! Veuillez selectionner l'image contenant des chiffres sous l'extension <strong>
+            <strong><div style="font-size: x-large;">Bienvenue !</div>  </strong><br>
+            <div class="j">Veuillez selectionner l'image contenant des chiffres sous l'extension <strong>
                 jpg </strong>, <strong>jpeg</strong> ou <strong>gif</strong>, et l'application reconnaîtra le chiffre ou
-            le nombre que cette image contient qu'il soit imprimé ou manuscrit.
+            le nombre que cette image contient qu'il soit imprimé ou manuscrit.</div> 
         </p>
     </div>
     <div class="bs">
@@ -38,12 +40,12 @@
                                         <!-- image-preview-clear button -->
                                         <button type="button" class="btn btn-default image-preview-clear c"
                                             style="display:none;">
-                                            <span class="glyphicon glyphicon-remove"></span> Clear
+                                            <span class="glyphicon glyphicon-remove"></span> Effacer
                                         </button>
                                         <!-- image-preview-input -->
                                         <div class="btn btn-default image-preview-input">
                                             <span class="glyphicon glyphicon-folder-open"></span>
-                                            <span class="image-preview-input-title c">Browse</span>
+                                            <span class="image-preview-input-title c">Sélectionner</span>
                                             <input type="file" accept="image/png, image/jpeg, image/gif"
                                                 name="input-file-preview" capture /> <!-- rename it -->
                                         </div>
